--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -11,6 +11,7 @@
     @extend %heading;
     font-size: 4rem;
     font-style: italic;
+    line-height: 1;
 
     &--light {
         color: $color-grey-light-1;
@@ -40,3 +41,8 @@
         color: $color-grey-dark-1;
     }
 }
+
+.mb-sm { margin-bottom: 2rem; }
+.mb-md { margin-bottom: 3rem; }
+.mb-lg { margin-bottom: 4rem; }
+.mb-hg { margin-bottom: 8rem; }
